Fix overflow navbar in RWD

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -10,6 +10,10 @@
 
 
 @media screen and (max-width: 506px) {
+	body {
+		max-width: 100vw;
+		overflow-x: hidden;
+	}
 	#header  .social {
 		position: initial;
 		line-height: 0;
